@@ -20,13 +20,17 @@
 
 #include <stdio.h>
 
+#include <QStringList>
+
 #include "codec_ogg.h"
 
 CodecOgg::CodecOgg(unsigned bitrate,QObject *parent)
   : Codec(Codec::TypeOgg,bitrate,parent)
 {
 #ifdef HAVE_OGG
+  ogg_codec_type=CodecOgg::Unknown;
   ogg_istate=0;
+  page_granule=0;
   ogg_sync_init(&oy);
   vorbis_info_init(&vi);
   vorbis_comment_init(&vc);
@@ -58,8 +62,11 @@ QString CodecOgg::defaultExtension() const
 void CodecOgg::process(const QByteArray &data,bool is_last)
 {
 #ifdef HAVE_OGG
+  int err;
   char *os_buffer;
-  float ipcm[4096];
+  float **pcm;
+  int frames;
+  float ipcm[11520];
 
   if(data.size()==0) {
     return;
@@ -75,15 +82,30 @@ void CodecOgg::process(const QByteArray &data,bool is_last)
 	fprintf(stderr,"stream version mismatch!\n");
 	return;
       }
+      page_granule=ogg_page_granulepos(&og);
       if(!ogg_stream_packetout(&os,&op)) {
 	fprintf(stderr,"error reading initial header packet\n");
 	return;
       }
-      if(vorbis_synthesis_headerin(&vi,&vc,&op)) {
-	ogg_istate=1;
+      if((op.bytes>=7)&&(memcmp(op.packet+1,"vorbis",6)==0)) {
+	ogg_codec_type=CodecOgg::Vorbis;
+	if(vorbis_synthesis_headerin(&vi,&vc,&op)) {
+	  ogg_istate=1;
+	}
+      }
+      if((op.bytes>=8)&&(memcmp(op.packet,"OpusHead",8)==0)) {
+	ogg_codec_type=CodecOgg::Opus;
+	if((ogg_opus_decoder=opus_decoder_create(48000,2,&err))==NULL) {
+	  fprintf(stderr,"Opus decoder error: %d\n",err);
+	}
+	setFramed(2,48000,0);
+	ogg_istate=10;
       }
       break;
 
+      // *********************************************************************
+      // * VORBIS Decode
+      // *********************************************************************
     case 1:  // VORBIS: Read info/comment headers
     case 2:
       ogg_stream_pagein(&os,&og);
@@ -105,17 +127,26 @@ void CodecOgg::process(const QByteArray &data,bool is_last)
     case 4:    // VORBIS: Decode Loop
       ogg_stream_pagein(&os,&og);
       while(ogg_stream_packetout(&os,&op)) {
-	float **pcm;
-	int samples;
-
 	if(vorbis_synthesis(&vb,&op)==0) {
 	  vorbis_synthesis_blockin(&vd,&vb);
-	  while((samples=vorbis_synthesis_pcmout(&vd,&pcm))>0) {
-	    int bout=(samples<4096?samples:4096);
+	  while((frames=vorbis_synthesis_pcmout(&vd,&pcm))>0) {
+	    int bout=(frames<4096?frames:4096);
 	    Codec::interleave(ipcm,pcm,vi.channels,bout);
 	    writePcm(ipcm,bout,false);
 	    vorbis_synthesis_read(&vd,bout);
 	  }
+	}
+      }
+      break;
+
+      // *********************************************************************
+      // * OPUS Decode
+      // *********************************************************************
+    case 10:
+      ogg_stream_pagein(&os,&og);
+      while(ogg_stream_packetout(&os,&op)) {
+	if((frames=opus_decode_float(ogg_opus_decoder,op.packet,op.bytes,ipcm,5760,0))>0) {
+	  writePcm(ipcm,frames,false);
 	}
       }
       break;
@@ -127,6 +158,27 @@ void CodecOgg::process(const QByteArray &data,bool is_last)
 
 void CodecOgg::loadStats(QStringList *hdrs,QStringList *values,bool is_first)
 {
+#ifdef HAVE_OGG
+  if(is_first) {
+    switch(ogg_codec_type) {
+    case CodecOgg::Vorbis:
+      hdrs->push_back("Codec|Algorithm");
+      values->push_back("OggVorbis");
+      break;
+
+    case CodecOgg::Opus:
+      hdrs->push_back("Codec|Algorithm");
+      values->push_back("OggOpus");
+      break;
+
+    case CodecOgg::Unknown:
+      break;
+    }
+
+    hdrs->push_back("Codec|Channels");
+    values->push_back(QString().sprintf("%u",channels()));
+  }
+#endif  // HAVE_OGG
 }
 
 
