@@ -283,3 +283,6 @@
 2016-11-29 Fred Gleason <fredg@paravelsystems.com>
 	* Added an Ogg codec in 'src/glassplayer/codec_ogg.cpp' and
 	'src/glassplayer/codec_ogg.h'.
+2016-11-29 Fred Gleason <fredg@paravelsystems.com>
+	Added OggOpus support in 'src/glassplayer/codec_ogg.cpp' and
+	'src/glassplayer/codec_ogg.h'.
